UWM-CMS: Fix homepage hero alignment in IE (#281)

--- a/docroot/themes/custom/uwmed/src/scss/_homepage.scss
+++ b/docroot/themes/custom/uwmed/src/scss/_homepage.scss
@@ -90,9 +90,6 @@
   .links-with-icon {
     @media (min-width: $screen-lg-min) {
       margin-top: -67px;
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
     }
 
     .links-with-icon__list {
